@@ -1,28 +1,0 @@
-name: Release Test
-on:
-  workflow_dispatch:
-    inputs:
-      releaseVersion:
-        description: 'Release Version'
-        required: true
-        default: ''
-      nextDevelopmentVersion:
-        description: 'Next Development Version ("-SNAPSHOT" muss nicht angegeben werden.)'
-        required: true
-        default: ''
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: build & push container image '${{ github.event.inputs.releaseVersion }}'
-        uses: mr-smithers-excellent/docker-build-push@v5
-        with:
-          image: 'aero.minova.cas.app'
-          tags: ${{ github.event.inputs.releaseVersion }}
-          registry: 'docker.io'
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          buildArgs: 'casVersion=${{ github.event.inputs.releaseVersion }}'
-          directory: $GITHUB_WORKSPACE/cas.app
