@@ -6,6 +6,7 @@ Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog
 ## [UNRELEASED] -- XXXX-XX-XX
 * In CAS Prozeduren die Last* Spalten fühlen, um Truncated Fehler auf Azure zu vermeiden
 * Helper-Version in Manifest an Helper-pom anpassen
+* gemeinsame GitHub Workflows aus https://github.com/minova-afis/aero.minova.os.github.workflows verwenden
 
 ## [12.63.10] -- 2023-06-05
 * Helper-Manifest ausbessern
